force-app/main/default/objects/Feature_Flag__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >Description of the feature flag and its intended behavior.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>