force-app/main/default/objects/Feature_Flag__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the feature flag is enabled.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>