force-app/main/default/objects/Feature_Flag__mdt/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Name of the feature controlled by this flag.</description>
    <label>Feature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>