force-app/main/default/objects/Feature_Flag__mdt/fields/License_Tier__c.field-meta.xml
<CustomField>
    <fullName>License_Tier__c</fullName>
    <description>License tier associated with the feature flag.</description>
    <label>License Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>